<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="listener"
            type="android.view.View.OnClickListener" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar_include"
            layout="@layout/toolbar" />

        <TextView
            android:id="@+id/tv_reply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"/>

        <EditText
            android:id="@+id/et_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:hint="@string/tx_message"
            android:inputType="textMultiLine"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:autofillHints="@string/tx_new_name" />

        <TextView
            android:id="@+id/tv_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tx_median_fee"
            android:layout_gravity="end"
            android:onClick="@{listener::onClick}"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"/>

    </LinearLayout>
</layout>