<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@null"
            android:src="@mipmap/icon_close" />

        <LinearLayout
            android:layout_below="@+id/iv_close"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_no_messages_from"
                android:textAppearance="@style/TextAppearanceBody2"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/color_yellow"
                android:textAppearance="@style/TextAppearanceHeadline5"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/user_until_removed"
                android:textAppearance="@style/TextAppearanceBody2"/>

            <TextView
                android:id="@+id/tv_submit"
                android:minWidth="240dp"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/common_submit"
                android:layout_marginTop="35dp"
                android:layout_gravity="center_horizontal"
                android:textAllCaps="true"
                android:gravity="center_horizontal|center"
                android:textColor="@color/color_white"
                android:textAppearance="@style/TextAppearanceBody1"
                android:background="@drawable/primary_rect_round_bg" />

            <TextView
                android:id="@+id/tv_do_not_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:textColor="@color/gray_dark"
                android:text="@string/common_do_not_show"
                android:textAppearance="@style/TextAppearanceBody2"/>

        </LinearLayout>
    </RelativeLayout>
</layout>